<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="10"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_mail"
        android:title="@string/action_mail"
        android:orderInCategory="20"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_msg"
        android:title="@string/action_msg"
        android:orderInCategory="40"
        app:showAsAction="never" />

    <item android:id="@+id/action_profil"
        android:title="@string/action_profil"
        android:orderInCategory="40"
        app:showAsAction="never" />
    <item android:id="@+id/action_setting"
        android:title="@string/action_setting"
        android:orderInCategory="50"
        app:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="60"
        app:showAsAction="never" />
</menu>